# StarryOS

./: Cargo.toml  Makefile  WSL环境完整方案.md
patches/axplat-aarch64-peripherals/: Cargo.toml  PATCH_NOTES.md
patches/axplat-aarch64-peripherals/src/: psci.rs
src/: main.rs
